add question svg icon

--- a/3D_cube_neon_rotate/index.html
+++ b/3D_cube_neon_rotate/index.html
@@ -12,13 +12,15 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="cube">
-      <div class="top"></div>
-      <div class="lateral">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+    <div class="containerCube">
+      <div class="cube">
+        <div class="top"></div>
+        <div class="lateral">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </div>
     </div>
 
